--- a/boardGameCafe/src/main/webapp/css/style_soon.css
+++ b/boardGameCafe/src/main/webapp/css/style_soon.css
@@ -10,13 +10,56 @@
 	margin: 0px;
 	padding: 0px;
 }
-
-body{
-	width:960px;
-	height:1500px;
-	margin:0 auto;
-	background:#FFFFFF;
+.page-main{
+	width: 1000px;
+	margin: 0 auto;
+	margin-top: 50px;
+	margin-bottom: 50px;
 }
+.page-main h2{
+	font-size: 30px;
+	margin-left: 20px;
+	margin-bottom: 30px;
+	margin-top: 30px;
+}
+
+/* modal */
+#modal.modal-overlay {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	left: 0;
+	top: 0;
+	display: none;
+	align-items: center;
+	justify-content: center;
+	background: rgba(255, 255, 255, 0.25);
+	backdrop-filter: blur(1.5px);
+}
+      
+#modal .modal-window {
+	background: rgba(255, 255, 255, 0.7);
+	box-shadow: 5px 5px rgb(73, 73, 73);
+	backdrop-filter: blur(13.5px);
+	border: 1px solid #000;
+	width: 300px;
+	position: relative;
+	top: -100px;
+	padding: 10px;
+	text-align: center;
+}
+        
+#modal .modal-content {
+	margin-top: 30px;
+	padding: 0px 10px;
+	color: #000;
+}
+        
+#modal .confirm-btn{
+	margin: 30px 0;
+}
+
+
 a:link{
 	text-decoration:none;
 	color:#000000;
@@ -36,19 +79,18 @@ a:hover{
 	text-align:center;
 }
 .align-right{
-	text-align:right;
+	text-align: right;
+	margin-right: 10px;
+	margin-top: 10px;
 }
-
 
 /* 주문페이지 form, table  */
 form[id="order_form"]{
 	border:none;
 }
 form{
-	width:915px;
 	margin:0 auto;
 	border:1px solid #000;
-	padding:10px 10px 10px 30px;
 }
 form ul li{
 	margin:0 auto;
@@ -58,9 +100,12 @@ form ul li label{
 	width:200px;
 	float:left; /* 태그를 왼쪽으로 정렬 */
 }
-
+#order_form li{
+	margin: 7px auto;
+}
 ul{
 	list-style:none;
+	margin-bottom: 30px;
 }
 input{
 	margin-top:4px;
@@ -69,20 +114,67 @@ input[type="text"]{
 	width:310px;
 }
 input[id="zipcode"]{
-	width:205px;
-}
-table{
-	margin:0 auto;
-	width:960px;
-	border:1px solid #000;
-	border-collapse:collapse;
-	margin-top:5px;
-}
-table td,table th{
-	border:1px solid #000;
-	padding:5px;
+	width:200px;
 }
 /* 주문 상세 페이지 결제, 배송 상태 */
 .payment-status ul li{
 	text-align: center;
 }
+
+/* 테이블 */
+table{
+	width: 100%;
+	border-collapse: collapse;
+}
+
+table td{
+	padding: 10px 0;
+	text-align: center;
+	font-size: 15px;
+}
+
+table a:link{
+	text-decoration: none;
+	color: #000;
+}
+
+table a:visited{
+	text-decoration: none;
+	color: #000;
+}
+
+table a:hover{
+	text-decoration: none;
+	color: #c6c6c6;
+	transition: 0.5s;
+}
+
+.border-bot{
+	border-bottom: 1px solid #000;
+}
+
+.border-bot th{
+	font-size: 16px;
+	padding: 15px 0;
+}
+
+.table-content-bot{
+	border-bottom: 1px solid #c7c7c7;
+}
+
+.table-content-bot:last-child{
+	border-bottom: 0px;
+}
+
+/* 버튼 */
+.btn{
+   width: 100px;
+   height: 25px;
+   border-radius: 0;
+   background: #fff;
+   border: 1px solid #000;
+   box-shadow: 3px 3px rgb(73, 73, 73);
+   font-size: 15px;
+   cursor: pointer;
+}
+
