--- a/boardGameCafe/src/main/webapp/css/style_ahn.css
+++ b/boardGameCafe/src/main/webapp/css/style_ahn.css
@@ -7,19 +7,25 @@
 
 .btn{
 	width: 100px;
-	height: 25px; 
+	height: 25px;
 	border-radius: 0;
 	background: #fff;
 	border: 1px solid #000;
+	box-shadow: 3px 3px rgb(73, 73, 73);
 	font-size: 15px;
 	cursor: pointer;
 }
 
 body{
-	width:960px;
-	height:1500px;
-	margin:0 auto;
-	background:#FFFFFF;
+	background-color:#f5f5f5;
+	color:#000;
+	word-wrap:break-word;
+	word-break:break-all;
+	line-height:22px;
+	margin:0;
+	padding:0;
+	font-size:13px;
+	font-weight:400;
 	font-family: "DungGeunMo";
 }
 li a:link{
@@ -47,36 +53,27 @@ li a:hover{
 
 
 div.content-photo{
-	height:1070px;
+	width:960px;
+	height:870px;
+	margin:0 auto;
 	align:center;
 	background-attachment:scroll;
 	padding: 50px;
 }
+
 div.cart-main{
-	background-color: rgba(150,150,150,0.1);
-	float:left;
-	width:65%;
+	background-color: rgba(138,161,161,0.3);
 	min-height:300px;
 }
-div.cart-side{
-	float:right;
-	width:30%;
-	margin:0 0 0 10px;
-	padding:0 0 0 10px;
-}
-div.cart-sub{
-	background-color: rgba(150,150,150,0.1);
-	float:none;
-	min-height:200px;
-}
 div.price-total{
-	background-color: rgba(150,150,150,0.1);
+	background-color: rgba(138,161,161,0.3);
 	float:none;
 	margin:20px 0 0 0;
 	border:1px solid #000;
+	font-size: 20px;
 }
 div.result-display{
-	background-color: rgba(0,0,0,0.1);
+	background-color: rgba(138,161,161,0.3);
 	width:400px;
 	height:200px;
 	margin:0 auto;
@@ -86,7 +83,6 @@ div.result-display{
 	justify-content:center;/*가로 정렬*/	
 }
 .result-name{
-	background-color: rgba(255,255,255,0.7);
 	width:30%;
 	display:flex;/*하위 요소를 수직으로 쌓을 수 있는 공간을 만듬*/
 	align-items:center;/*세로 정렬*/
@@ -94,7 +90,6 @@ div.result-display{
 	margin: 0 0 50px 0;
 }
 .result{
-	border:1px solid #000;
 	width:100%;
 	height:40%;
 	margin:0 auto;
