--- a/boardGameCafe/src/main/webapp/css/style_main.css
+++ b/boardGameCafe/src/main/webapp/css/style_main.css
@@ -176,6 +176,13 @@
 	display: flex;
 	height: 120px;
 	width: 100%;
+	
+	/* 헤더 상단 고정 */
+	position: sticky;
+	top: 0;
+	background: #fff;
+	border-bottom: 1px solid #000;
+	z-index: 1;
 }
 
 .menubar{
