--- a/boardGameCafe/src/main/webapp/css/style_hapalpal.css
+++ b/boardGameCafe/src/main/webapp/css/style_hapalpal.css
@@ -5,7 +5,7 @@
 body{
 	width:960px;
 	margin:0 auto;
-	background:#E6E6E6;
+	background:rgb(255, 255, 255);
 }
 a:link{
 	text-decoration:none;
@@ -93,7 +93,7 @@ h2{
 	background:#FFFFFF;
 	margin:40px 0;
 	border-radius:5px;
-	box-shadow:0 2px 6px rgba(100,100,100,0.3);
+	box-shadow:0 2px 6px rgb(255, 255, 255);
 	min-height:650px;
 }
 .content-main{
@@ -116,14 +116,14 @@ h2{
 -------------------- */
 .align-center{
 	text-align:center;
-	margin: -22px 0px 3px 0px;
+	margin: -40px 0px 15px 0px;
 }
 .align-right{
 	text-align:right;
 }
 .align-center1 {
     text-align: center;
-    margin: -22px 0px 3px 0px;
+    margin: -40px 0px 15px 0px;
 }
 /* 메뉴
 ------------------- */
@@ -214,6 +214,7 @@ input[type="number"]{
 	margin-left:130px;
 }
 
+
 /* 로그인
 ------------------- */
 #login_form #id,#login_form #passwd{
@@ -237,118 +238,3 @@ input[type="number"]{
 	/*사각형의 모서리 둥근 정도를 지정하는 속성. 50%를 지정하면 완전한 원*/
 	border-radius:50%;
 }
-
-/* 공통 목록
-------------------- */
-form#search_form{
-	border:none;
-}
-ul.search{
-	width:340px;
-	list-style:none;
-	padding:0;
-	margin:0 auto;
-}
-ul.search li{
-	margin:0 0 9px 0;
-	padding:0;
-	display:inline;
-}
-.list-space{
-	margin-bottom:10px;
-}
-table{
-	width:100%;
-	border:1px solid #000;
-	border-collapse:collapse;
-	margin-top:5px;
-}
-table td,table th{
-	border:1px solid #000;
-	padding:5px;
-}
-
-/* 회원관리 목록
-------------------- */
-
-/* 게시판 글 상세
-------------------- */
-ul.detail-info{
-	list-style:none;
-}
-ul.detail-info li{
-	display:inline-block;
-}
-.detail-img{
-	max-width:500px;
-}
-ul.detail-sub{
-	list-style:none;
-	margin:0;
-	padding:0;
-}
-ul.detail-sub li{
-	display:inline-block;
-	width:49%;
-	height:50px;
-	vertical-align:middle;
-}
-ul.detail-sub li:first-child img{
-	vertical-align:middle;
-}
-ul.detail-sub li:last-child{
-	text-align:right;
-	line-height:250%;
-}
-#output_fav{
-	cursor:pointer;
-}
-div#reply_div{
-	padding:5px 10px 40px 10px;
-	margin-top:10px;
-	background-color:#EEEEEE;
-}
-form#re_form{
-	width:650px;
-	border:none;
-}
-span.re-title{
-	color:#000;
-	font-size:12pt;
-	line-height:200%;
-}
-span.letter-count{
-	font-size:10pt;
-	color:#999;
-}
-textarea.rep-content{
-	width:90%;
-	height:50px;
-	margin:10px 10px;
-}
-div#re_first, div#mre_first{
-	float:left;
-	width:70%;
-	padding-left:15px;
-	margin-bottom:10px;
-}
-div#re_second, div#mre_second{
-	float:left;
-	width:19%;
-	margin-bottom:10px;
-}
-div#loading{
-	text-align:center;
-}
-div.paging-button{
-	text-align:right;
-}
-div#output{
-	clear:both;
-}
-form#mre_form{
-	border:none;
-	margin:5px;
-}
-
-
