--- a/boardGameCafe/src/main/webapp/css/style_seul.css
+++ b/boardGameCafe/src/main/webapp/css/style_seul.css
@@ -13,12 +13,12 @@
 	padding: 0px;
 }
 
-body{
+/* body{
 	width: 1000px;
 	margin: 0 auto;
-	/*background: #9673cd;*/
+	background: #9673cd;
 	background: #fff;
-}
+} */
 
 /* 게임 소개
 --------------------- */
@@ -41,7 +41,7 @@ ul.search li{
 	display:inline;
 }
 .adminbtn{
-	background: #bb2d3b;
+	background:#8aa1a1;
 	color: white;
 	border-style: none;
 	cursor: pointer;
@@ -49,12 +49,13 @@ ul.search li{
 	padding:5px; 
 	box-shadow: 3px 3px 3px rgb(73 73 73);
 	position: fixed;
-    top: 5px;
-    left: 100px;
+    top: 120px;
+    left: 75px;
 }
 /* 게임목록 */
 .page-main{
 	margin: 0 auto;
+	width: 1000px;
 }
 .image-space .horizontal-area{
 	margin:2px;
@@ -67,11 +68,9 @@ ul.search li{
 	text-align:center;
 }
 .image-space .horizontal-area img{
-	width:215px;
-	height:195px;
-}
-.image-space .float-clear{
-	clear:both;
+    width:215px;
+    height:195px;
+
 }
 .image-space .float-clear{
 	clear:both;
@@ -81,7 +80,7 @@ ul.search li{
 	color:black;
 }
 .image-space #delete_btn{
-	background: #bb2d3b;
+	background:#8aa1a1;
 	color: white;
 	border-style: none;
 	cursor: pointer;
@@ -100,44 +99,58 @@ ul.search li{
 
 /* 게임상세
 -------------------- */
+.a{
+	margin-top: 5px;
+    margin-bottom: 10px;
+    margin-left: 15px;
+    
+}
 .detailpage-main{
  	width: 1000px; 
+	/* margin-left: 230px;  */
 	margin: 0 auto;
 }
 .detailpage-main h1{
- 	text-align:center;
  	margin: 10px auto;
 }
 .image-detail{
-	text-align:center;	
+	text-align:center;
+	margin: 0 auto;
 } 
 .image-detail img{/* 사진크기 */
-	width:215px;
-	height:195px;
+	width:310px;
+	height:270px;
+	float:left;
+	
 }
-.game-detail{
- 	width: 60%; 
+.detailpage-main .game-detail{
+	float:right;
+	width: 65%;
+	height:270px;
 	margin: 0 auto;
-	background:#E6E6E6;	
+	background:#E6E6E6;
 }
-.game-detail .namenprice{
-	text-align: center;
+
+.game-detail #A{
+	margin: 5px 17px;	
 }
-.game-detail .namenprice b{
+.game-detail #A .game-name{
 	font-size: 25px;
+
 }
 
 .game-detail hr{
- 	width: 70%; 
-	margin: 0 auto;	
+ 	width: 95%; 
+	margin: 0 auto;
+	border : 0px;
+	border-top : 2px solid  rgb(73 73 73);	
 }
 
 #cartbtn{
-	background: #bb2d3b;
+	background:#8aa1a1;
 	color: white;
 	border-style: none;
 	cursor: pointer;
-	margin-top:5px;
 	padding:5px; 
 	box-shadow: 3px 3px 3px rgb(73 73 73);
 	float: rigth;
@@ -145,7 +158,52 @@ ul.search li{
 .game-detail .C{
 	margin: 0 auto;
 }
+#item_cart{
+	float: right;
+    margin-right: 15px;
+}
+.game-detail .game-explanation{
+	margin: 5px 17px;
+}
+
+.game-detail .game-explanation .ex{
+	font-size: 13px;
+    line-height: 22px;
+    overflow: auto;
+    max-height: 176px;
+    margin: 5px 10px;
+}
+.game-detail .small-footer{
+	margin: 5px 19px 17px 10px;
+	font-size: 15px;
+}
+.game-detail #1{
+	float: right;
+}
+.game-detail #2{
+	float: center;
+}
+.game-detail #3{
+	float: right;
+}
 
 /* 리뷰 쓰기, 목록 */
-
+.review_div{
+	clear:both;
+ 	margin-left: 460px;
+ 	margin-right: 300px;  
+    padding-top: 15px;
+    padding-bottom: 30px;
+}
+#re_form{
+	margin-top: 8px;
+}
+.review_div .re-title{
+	padding-bottom: 5px;
+}
+/* .review_div #rev_content{
+	margin-top: 10px;
+	margin: 10px auto;
+	width: 1000px
+} */
 
