--- a/boardGameCafe/src/main/webapp/css/style_seul.css
+++ b/boardGameCafe/src/main/webapp/css/style_seul.css
@@ -40,6 +40,14 @@ ul.search li{
 	padding:0;
 	display:inline;
 }
+/* .search1 li input .keyword{
+	margin-left:22px;
+    border: solid 1.5px #000;
+    padding-left: 5px;
+    font-size:20px;
+    height:22px;
+}  */
+
 .adminbtn{
 	background:#8aa1a1;
 	color: white;
@@ -50,7 +58,7 @@ ul.search li{
 	box-shadow: 3px 3px 3px rgb(73 73 73);
 	position: fixed;
     top: 120px;
-    left: 75px;
+    left: 25px;;
 }
 /* 게임목록 */
 .page-main{
@@ -121,6 +129,7 @@ ul.search li{
 	width:310px;
 	height:270px;
 	float:left;
+	box-shadow: 0 5px 5px grey;; /* ????? */
 	
 }
 .detailpage-main .game-detail{
@@ -190,10 +199,12 @@ ul.search li{
 /* 리뷰 쓰기, 목록 */
 .review_div{
 	clear:both;
- 	margin-left: 460px;
+    margin-left: 460px;
  	margin-right: 300px;  
     padding-top: 15px;
     padding-bottom: 30px;
+/*     text-align:center;
+	margin: 0 auto; */
 }
 #re_form{
 	margin-top: 8px;
@@ -207,3 +218,35 @@ ul.search li{
 	width: 1000px
 } */
 
+/* 게임등록
+-------------------- */
+
+.page-main1{
+    margin-top: 15px;
+    margin-left: 720px;
+}
+/* .page-main1 h2{
+	padding-left:550px;
+	margin-top:30px;
+	margin-bottom:-20px;	
+} */
+
+ul{
+	list-style:none;
+	margin:0;
+	padding:0;
+	display:block;
+	margin-block-start:1em;
+	margin-block-end:1em;
+	margin-inline-start:0px;
+	margin-inline-end:0px;
+	padding-inline-start:40px;
+}
+li{
+	margin:0;
+	padding:0;
+}  
+.page-main1 ul li label{
+	float:left;
+	width:110px;	
+}
