230115 14:26 모달창 오류 수정/footer 파일

--- a/boardGameCafe/src/main/webapp/css/style_hyem.css
+++ b/boardGameCafe/src/main/webapp/css/style_hyem.css
@@ -29,6 +29,7 @@ input:focus{
     display: none; 
 	background: rgba(255, 255, 255, 0.25);
 	backdrop-filter: blur(1.5px);
+	z-index: 1;
 }
       
 #modal .modal-window {	
@@ -58,6 +59,9 @@ input:focus{
 	width: 1000px;
 	margin: 0 auto;
 	margin-top: 50px;
+	height: auto;
+  	min-height: 50vh;
+    position: relative;
 }
 
 .page-main h2{
@@ -109,14 +113,20 @@ input:focus{
 	min-height: 300px;
 }
 
+.inqu-content p{
+	line-height: 25px;
+}
+
 .origin-inquiry{
 	margin: 10px 0 10px 10px;
 	min-height: 100px;
+	line-height: 25px;
 }
 
 .reply-inquiry{
 	margin: 10px 0 10px 10px;
 	min-height: 100px;
+	line-height: 25px;
 }
 
 .detail-img{
@@ -314,4 +324,21 @@ table a:hover{
 	text-align: right;
 	margin-right: 10px;
 	margin-top: 10px;
+}
+
+/* 내용 없을 때 */
+.result-display{
+	width: 300px;
+    height: 150px;
+    border-radius: 0;
+    background: rgb(255 255 255);
+    border: 1px solid rgb(0 0 0);
+    box-shadow: 3px 3px rgb(73 73 73);
+    font-size: 15px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
