--- a/boardGameCafe/src/main/webapp/css/style_ddk.css
+++ b/boardGameCafe/src/main/webapp/css/style_ddk.css
@@ -533,3 +533,42 @@ table a:hover{
 .pagebottom {
 	height: 150px;
 }
+
+/* 파일 선택 버튼 */
+.filebox input[type="file"]{
+	position: absolute;
+	width: 0;
+	height: 0;
+	padding: 0;
+	overflow: hidden;
+	border: 0;
+}
+
+.filebox label{
+	width: 100px;
+	height: 25px;
+	margin-top: 10px;
+	border-radius: 0;
+	background: #fff;
+	border: 1px solid #000;
+	box-shadow: 3px 3px rgb(73, 73, 73);
+	font-size: 15px;
+	cursor: pointer;
+	float: left;
+    padding-top: 8px;
+    margin-left: 20px;
+}
+
+.filebox .filename{
+	display: inline-block;
+	height: 40px;
+	padding-top: 5px;
+	vertical-align: middle;
+	border: none;
+	margin-left: 10px;
+	background: rgba(0, 0, 0, 0);
+}
+
+.filename:focus{
+	outline: none;
+}
