--- a/boardGameCafe/src/main/webapp/css/style_seul.css
+++ b/boardGameCafe/src/main/webapp/css/style_seul.css
@@ -26,29 +26,55 @@
 	min-height: 50vh;
 }
 /* 검색 폼 */
+
 form#search_form{
 	border:none;
 	margin-top: 10px;
-	margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 ul.search{
-	width:440px;
+	width:50%;
 	list-style:none;
 	padding:0;
 	margin:0 auto;
 }
 ul.search li{
-	margin:0 0 9px 0;
+	display:inline;
+}
+/*  ul.search1{
+	width:1000px;
+	list-style:none;
+	padding:0;
+	text-align: center;
+}
+form#search_form{
+	border:none;
+	margin-top: 10px;
+	margin-bottom: 20px;
+}
+ul.search1 li{
+	margin-bottom:9px;
+	margin-left: 230px;
 	padding:0;
 	display:inline;
 }
-/* .search1 li input .keyword{
+ .search1 li input #keyword{
+	width: 404px;
+    height: 24px;
+} 
+
+.search1 li input .keyword{
 	margin-left:22px;
     border: solid 1.5px #000;
     padding-left: 5px;
     font-size:20px;
     height:22px;
-}  */
+} */
+
+
+
+
+
 
 .adminbtn{
 	background:#8aa1a1;
@@ -68,9 +94,9 @@ ul.search li{
 	width: 1000px;
 }
 .image-space .horizontal-area{
-	margin:2px;
+	margin: 5px 6px;
 	padding:3px;
-	padding-bottom:23px;
+	padding-bottom:20px;
 	width:220px;
 	height:240px;
 	float:left;
@@ -80,6 +106,8 @@ ul.search li{
 .image-space .horizontal-area img{
     width:215px;
     height:195px;
+    margin-bottom: 5px;
+    box-shadow: 0 5px 5px grey;
 
 }
 .image-space .float-clear{
@@ -94,13 +122,17 @@ ul.search li{
 	color: white;
 	border-style: none;
 	cursor: pointer;
-	margin-top:5px;
 	padding:5px; 
 	box-shadow: 3px 3px 3px rgb(73 73 73);
 }
 .gname{
 	font-size: 15;
 }
+/* .float-clear{
+	width:1000px;
+	margin: 0 auto;
+} */
+
 /* 페이지 */
 .align-center{
 	text-align:center;
@@ -131,7 +163,7 @@ ul.search li{
 	width:310px;
 	height:270px;
 	float:left;
-	box-shadow: 0 5px 5px grey;; /* ????? */
+	box-shadow: 0 10px 10px grey;
 	
 }
 .detailpage-main .game-detail{
@@ -185,16 +217,16 @@ ul.search li{
     margin: 5px 10px;
 }
 .game-detail .small-footer{
-	margin: 5px 19px 17px 10px;
+	margin: 5px 0px 5px 88px;
 	font-size: 15px;
 }
-.game-detail #1{
+.small-footer #1{
 	float: right;
 }
-.game-detail #2{
+.small-footer #2{
 	float: center;
 }
-.game-detail #3{
+.small-footer #3{
 	float: right;
 }
 
@@ -215,10 +247,11 @@ ul.search li{
 	margin-top: 8px;
 }
 .review_div .re-title{
+	padding-top:10px;
 	padding-bottom: 5px;
 }
 #output{
-	
+	 margin-top: 15px;
 }
 
 
