--- a/boardGameCafe/src/main/webapp/css/style_seul.css
+++ b/boardGameCafe/src/main/webapp/css/style_seul.css
@@ -41,41 +41,6 @@ ul.search{
 ul.search li{
 	display:inline;
 }
-/*  ul.search1{
-	width:1000px;
-	list-style:none;
-	padding:0;
-	text-align: center;
-}
-form#search_form{
-	border:none;
-	margin-top: 10px;
-	margin-bottom: 20px;
-}
-ul.search1 li{
-	margin-bottom:9px;
-	margin-left: 230px;
-	padding:0;
-	display:inline;
-}
- .search1 li input #keyword{
-	width: 404px;
-    height: 24px;
-} 
-
-.search1 li input .keyword{
-	margin-left:22px;
-    border: solid 1.5px #000;
-    padding-left: 5px;
-    font-size:20px;
-    height:22px;
-} */
-
-
-
-
-
-
 .adminbtn{
 	background:#8aa1a1;
 	color: white;
@@ -128,11 +93,6 @@ ul.search1 li{
 .gname{
 	font-size: 15;
 }
-/* .float-clear{
-	width:1000px;
-	margin: 0 auto;
-} */
-
 /* 페이지 */
 .align-center{
 	text-align:center;
@@ -149,7 +109,6 @@ ul.search1 li{
 }
 .detailpage-main{
  	width: 1000px; 
-	/* margin-left: 230px;  */
 	margin: 0 auto;
 }
 .detailpage-main h1{
@@ -173,22 +132,18 @@ ul.search1 li{
 	margin: 0 auto;
 	background:#E6E6E6;
 }
-
 .game-detail #A{
 	margin: 5px 17px;	
 }
 .game-detail #A .game-name{
 	font-size: 25px;
-
 }
-
 .game-detail hr{
  	width: 95%; 
 	margin: 0 auto;
 	border : 0px;
 	border-top : 2px solid  rgb(73 73 73);	
 }
-
 #cartbtn{
 	background:#8aa1a1;
 	color: white;
@@ -208,7 +163,6 @@ ul.search1 li{
 .game-detail .game-explanation{
 	margin: 5px 17px;
 }
-
 .game-detail .game-explanation .ex{
 	font-size: 13px;
     line-height: 22px;
@@ -220,7 +174,7 @@ ul.search1 li{
 	margin: 5px 0px 5px 88px;
 	font-size: 15px;
 }
-.small-footer #1{
+/* .small-footer #1{
 	float: right;
 }
 .small-footer #2{
@@ -229,16 +183,13 @@ ul.search1 li{
 .small-footer #3{
 	float: right;
 }
-
+ */
 /* 리뷰 쓰기, 목록 */
 .review_div{
 	clear:both;
     margin: 0 auto;
     padding-top: 35px;
     padding-bottom: 30px;
-    
-/*     text-align:center;
-	margin: 0 auto; */
 }
 .test{
 	background-color:#E6E6E6;	
@@ -254,21 +205,24 @@ ul.search1 li{
 	 margin-top: 15px;
 }
 
-
 /* 게임등록
 -------------------- */
 
-.page-main1{
+/* .page-main1{
     margin-top: 15px;
     margin-left: 720px;
-}
-/* .page-main1 h2{
-	padding-left:550px;
+} */
+.page-main1 h2{
+	padding-left:35%;
 	margin-top:30px;
 	margin-bottom:-20px;	
-} */
-
-ul{
+} 
+.form-admin{
+	padding-left: 35%;
+    padding-top: 30px;	
+    margin: 0 auto;
+}
+page-main1 ul{
 	list-style:none;
 	margin:0;
 	padding:0;
@@ -278,12 +232,19 @@ ul{
 	margin-inline-start:0px;
 	margin-inline-end:0px;
 	padding-inline-start:40px;
+	min-height: 50vh;
 }
-li{
-	margin:0;
-	padding:0;
-}  
+.page-main1 li{
+	list-style: none;
+	margin-left:10px;
+	margin-bottom: 5px;
+}
+
+.page-main1 .align-center{
+	float: left;
+	margin-left:48%;
+} 
 .page-main1 ul li label{
-	float:left;
-	width:110px;	
+ 	float:left; 
+	width:120px;	
 }
