룸 디테일 높이조정

--- a/boardGameCafe/src/main/webapp/css/style_hoon.css
+++ b/boardGameCafe/src/main/webapp/css/style_hoon.css
@@ -24,6 +24,11 @@ body{
 	margin:0 auto;
 	height: 200vh;
 }
+.containerrr{
+	width:990px;
+	margin:0 auto;
+	height: 130vh;
+}
 
 .wrap_inn{
 	position:relative;
