--- a/boardGameCafe/src/main/webapp/css/style_ahn.css
+++ b/boardGameCafe/src/main/webapp/css/style_ahn.css
@@ -49,6 +49,11 @@ li a:hover{
 .align-right{
 	text-align:right;
 }
+
+a{
+	text-decoration: none;
+	color: inherit;
+}
 /*-----------------------------------------*/
 
 
